# virsa

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  getSystemEndianness.cmake  setupBoost.cmake  setupBuild.sh  setupGTest.cmake  updateBuildNumber.cmake
config/: CMakeLists.txt  README.md  virsaConfig.json
lib/: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  VIRSA.cpp  VIRSA.h  buildConfig.h  main.cpp  updateBuildInfo.sh
src/configuration/: CMakeLists.txt  ConfigurationManager.cpp  ConfigurationManager.h
src/configuration/gtest/: CMakeLists.txt
src/gtest/: CMakeLists.txt  gtest_virsa.cpp
src/network/: CMakeLists.txt  Socket.cpp  Socket.h  UDPSocket.cpp  UDPSocket.h
src/network/ipv4/: CMakeLists.txt  Socket.cpp  Socket.h  UDPSocket.cpp  UDPSocket.h
src/video/: CMakeLists.txt  VideoCapture.cpp  VideoCapture.h  VideoCapturer.h
src/video/unix/: CMakeLists.txt
src/video/win/: CMakeLists.txt  VideoCapturer.cpp
